--- a/vovfeozn02/index.html
+++ b/vovfeozn02/index.html
@@ -739,6 +739,19 @@
 	</div>
 	<div class="timeline-badge blue white-text"><i class="material-icons">assignment_turned_in</i></div>
 </section>
+<section class="timeline-event">
+	<div class="card timeline-content">
+		<div class="card-content">
+			<span class="card-title unslug">assembly-completed</span>
+
+			<ul class="collection">
+				<li class="collection-item">time <span class="secondary-content">2019-06-03 03:58</span></li>
+				<li class="collection-item">technician <span class="secondary-content">Rune Warhuus</span></li>
+			</ul>
+		</div>
+	</div>
+	<div class="timeline-badge blue white-text"><i class="material-icons">assignment_turned_in</i></div>
+</section>
 		</div>
 	</div>
 
