--- a/site/q8c1v51fk5/index.html
+++ b/site/q8c1v51fk5/index.html
@@ -765,6 +765,19 @@
 <section class="timeline-event">
 	<div class="card timeline-content">
 		<div class="card-content">
+			<span class="card-title unslug">packing-completed</span>
+
+			<ul class="collection">
+				<li class="collection-item">time <span class="secondary-content">2019-06-03 14:00</span></li>
+				<li class="collection-item">technician <span class="secondary-content">Rune Warhuus</span></li>
+			</ul>
+		</div>
+	</div>
+	<div class="timeline-badge blue white-text"><i class="material-icons">assignment_turned_in</i></div>
+</section>
+<section class="timeline-event">
+	<div class="card timeline-content">
+		<div class="card-content">
 			<span class="card-title unslug">shipped</span>
 
 			<ul class="collection">
@@ -773,6 +786,22 @@
 <li class="collection-item">to <span class="secondary-content">Tin Shed Modular</span></li>
 <li class="collection-item">courier <span class="secondary-content">DHL</span></li>
 <li class="collection-item">tracking-number <span class="secondary-content">2116101831</span></li>
+			</ul>
+		</div>
+	</div>
+	<div class="timeline-badge blue white-text"><i class="material-icons">assignment_turned_in</i></div>
+</section>
+<section class="timeline-event">
+	<div class="card timeline-content">
+		<div class="card-content">
+			<span class="card-title unslug">shipped</span>
+
+			<ul class="collection">
+				<li class="collection-item">time <span class="secondary-content">2019-06-05 17:00</span></li>
+				<li class="collection-item">technician <span class="secondary-content">Rune Warhuus</span></li>
+<li class="collection-item">to <span class="secondary-content">Control</span></li>
+<li class="collection-item">courier <span class="secondary-content">DHL</span></li>
+<li class="collection-item">tracking-number <span class="secondary-content">8331210510</span></li>
 			</ul>
 		</div>
 	</div>
