--- a/7thtrekunc/index.html
+++ b/7thtrekunc/index.html
@@ -753,14 +753,12 @@
 <section class="timeline-event">
 	<div class="card timeline-content">
 		<div class="card-content">
-			<span class="card-title unslug">shipped</span>
+			<span class="card-title unslug">problem-resolved</span>
 
 			<ul class="collection">
-				<li class="collection-item">time <span class="secondary-content">2019-06-05 17:00</span></li>
+				<li class="collection-item">time <span class="secondary-content">2019-06-23 16:26</span></li>
 				<li class="collection-item">technician <span class="secondary-content">Rune Warhuus</span></li>
-<li class="collection-item">to <span class="secondary-content">Control</span></li>
-<li class="collection-item">courier <span class="secondary-content">DHL</span></li>
-<li class="collection-item">tracking-number <span class="secondary-content">8331210510</span></li>
+<li class="collection-item">solution <span class="secondary-content">Resoldered pin #3 on direction jack. Pin was not soldered</span></li>
 			</ul>
 		</div>
 	</div>
