--- a/site/rrpst4221f/index.html
+++ b/site/rrpst4221f/index.html
@@ -779,6 +779,22 @@
 	</div>
 	<div class="timeline-badge blue white-text"><i class="material-icons">assignment_turned_in</i></div>
 </section>
+<section class="timeline-event">
+	<div class="card timeline-content">
+		<div class="card-content">
+			<span class="card-title unslug">shipped</span>
+
+			<ul class="collection">
+				<li class="collection-item">time <span class="secondary-content">2019-07-01 17:00</span></li>
+				<li class="collection-item">technician <span class="secondary-content">Rune Warhuus</span></li>
+<li class="collection-item">to <span class="secondary-content">Edouard Lombard</span></li>
+<li class="collection-item">courier <span class="secondary-content">DHL</span></li>
+<li class="collection-item">tracking-number <span class="secondary-content">4085006133</span></li>
+			</ul>
+		</div>
+	</div>
+	<div class="timeline-badge blue white-text"><i class="material-icons">assignment_turned_in</i></div>
+</section>
 		</div>
 	</div>
 
